# XYZModelNQS

./: .env  .gitignore  Dockerfile  Makefile  README.md  build.sh  pyproject.toml  requirements-dev.txt  run.sh
docker/: build.sh  cmd.sh  install.sh  run.sh
docker/image/: .dockerignore  Dockerfile
docs/: README.md  features.md
project/: Makefile  main.py  trf_main.py
project/config/: config.yaml
project/config/chain/: other.yaml  tfi.yaml  xx.yaml  xxx.yaml  xxz.yaml  xxz_anisotropy.yaml  xy.yaml
project/config/model/: cnn.yaml  ffn.yaml  ffn_symm.yaml  gcnn.yaml  phase_transformer.yaml  transformer.yaml  tutorial_vit.yaml
project/config/nqs/: config.yaml
project/config/optimizer/: sgd_exp.yaml
project/config/sampler/: metropolis.yaml
project/data/: plot.py  report_n10_j-1.0_hNone_lam0.5_gamma1.0.csv  report_n10_j-1.0_hNone_lam1.0_gamma0.0.csv
project/data/transfer_learning_10_0.65/: bias.npy  kernel.npy  results_fs_0.csv  results_fs_1.csv  training_logs_scratch_is_0.json  training_logs_scratch_is_1.json
project/data/transfer_learning_21_0.65/: bias.npy  exact_sol.txt  kernel.npy  results_fs_0.csv  results_fs_1.csv  training_logs_scratch_is_1.json
project/gnuplot/: energy_and_magnetization.gp  energy_and_zz.gp
project/notebooks/: PrePublicationPlots.ipynb  report_plots.ipynb
project/src/app/: app.py
project/src/exact/: analytical.py
project/src/model/: __init__.py  callbacks.py  machine.py  nqs.py  operators.py  tl_experiment.py
project/src/monkey_patch/: __init__.py  mc_state.py
project/src/scripts/: __init__.py  analyse_results.py  (+8 more)
(+81 files in other folders)
