[tool.poetry]
name = "xyzmodelnqs"
version = "0.1.0"
description = "Magnetic spin states."
authors = ["merkul"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
netket = "^3.17.1"
pennylane = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
